[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Head.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/LaserProjectile.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://assets/testblahblah.jpg" type="Texture" id=4]

[node name="Main" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 0.013
margin_left = -560.0
margin_top = -216.0
margin_right = 1168.2
margin_bottom = 800.0
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head" parent="." instance=ExtResource( 1 )]
position = Vector2( 311, 467 )
z_index = 500
laser_scene = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 296, 304 )
current = true
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScrollLeft" type="Button" parent="CanvasLayer"]
margin_left = 9.0
margin_top = 196.0
margin_right = 88.0
margin_bottom = 379.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollRight" type="Button" parent="CanvasLayer"]
margin_left = 496.216
margin_top = 202.674
margin_right = 575.216
margin_bottom = 385.674
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RBorder" type="Position2D" parent="."]
position = Vector2( 500, 336.76 )

[node name="LBorder" type="Position2D" parent="."]
position = Vector2( 100, 336.76 )

[connection signal="mouse_entered" from="CanvasLayer/ScrollLeft" to="Camera2D" method="_on_ScrollLeft"]
[connection signal="mouse_exited" from="CanvasLayer/ScrollLeft" to="Camera2D" method="_on_ScrollLeftStop"]
[connection signal="mouse_entered" from="CanvasLayer/ScrollRight" to="Camera2D" method="_on_ScrollRight"]
[connection signal="mouse_exited" from="CanvasLayer/ScrollRight" to="Camera2D" method="_on_ScrollRightStop"]
